# atmine2.0

./: .gitignore  CMakeLists.txt
core/: CMakeLists.txt  dummy.cpp  dummy.h
